test/should-fail/vsgc1151.f3
/*
 * Regression test for VSGC-1151 : "x is already defined" is detected too late
 *
 * @test/compile-error
 */

function f(x:Object) {
var x:Object;
}
